# webellian

./: .gitignore  .ruff.toml  Dockerfile  Makefile  README.MD  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3763c8fecc0c_init.py
app/: config.py  database.py  exceptions.py  main.py
app/models/: catalog.py  product.py
app/repositories/: __init__.py  catalog_repository.py  product_repository.py
app/routers/: catalogs.py  products.py
app/schemas/: __init__.py  catalog.py  product.py
app/services/: __init__.py
app/services/catalog/: __init__.py  create_catalog.py  delete_catalog.py  get_catalog.py  get_catalog_list.py  update_catalog.py
app/services/product/: __init__.py  create_product.py  delete_product.py  get_product.py  get_product_list.py  update_product.py
tests/: conftest.py  test_catalogs.py  test_products.py
